# ecommerce-product-assistant

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
k8/: deployment.yaml
notebook/: test.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluations/: ragas_eval.py
prod_assistant/logger/: __init__.py
prod_assistant/mcp_server/: client.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: agentic_mcp.py  agentic_mcp_websearch.py  agentic_rag_workflow.py  generation_workflow.py  workflow_class.py
templates/: chat.html
